# skyterra-hls-download

./: .coverage  CLAUDE.md  MCP_README.md  README.md  claude_desktop_config.example.json  mcp.json  mcp_config_examples.json  pyproject.toml  skyterra_hls_mcp.py
.kilocode/: mcp.json
src/: __init__.py  hls_downloader.py  image_utils.py
test_output/: T42UWB_20250505T062311_2025-05-05.tif  T42UWB_20250617T061629_2025-06-17.tif  T42UWB_20250925T061629_2025-09-25.tif  T42UWB_20250925T061629_2025-09-25.tif.aux.xml  final_cropped.tif  final_cropped.tif.aux.xml  merged_temporal.tif
tests/: test_hls_downloader.py  test_image_utils.py  test_workflow.py
